Update SnapshotHelper: complete main snapshoting work.